--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
         // CALCUL JOURS ENSEMBLE
         function calculateDaysTogether() {
             // CHANGE CETTE DATE avec votre vraie date de début de relation
-            const startDate = new Date('2024-01-01'); // ← CHANGE CETTE DATE !
+            const startDate = new Date('2025-01-14'); // ← CHANGE CETTE DATE !
             const today = new Date();
             const diffTime = Math.abs(today - startDate);
             const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
@@ -681,7 +681,7 @@
         // DONNÉES DES SOUVENIRS (vos photos + descriptions)
         const memories = [
             {
-                image: '/mnt/user-data/uploads/1000425644.jpg',
+                image: 'IMG-20260211-WA0016.jpg',
                 title: 'Ta Beauté Éblouissante 🌺',
                 description: 'Ce jour-là, tu rayonnais comme une étoile. Ton sourire illuminait tout autour de toi, et j\'ai su que tu étais la plus belle constellation de ma vie.',
                 color: '#ff6ec7'
