--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
                 color: '#ff6ec7'
             },
             {
-                image: '/mnt/user-data/uploads/1000425557.jpg',
+                image: 'IMG-20260211-WA0022.jpg',
                 title: 'Nos Moments Complices ✨',
                 description: 'Ces instants où seuls nos regards suffisent à tout dire. Notre langage secret que personne d\'autre ne comprend.',
                 color: '#7873f5'
