--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
                 color: '#ff6ec7'
             },
             {
-                image: '/mnt/user-data/uploads/1000425650.jpg',
+                image: 'IMG-20260211-WA0027.jpg',
                 title: 'Ton Regard Qui M\'émerveille 😍',
                 description: 'Dans tes yeux, je vois toutes les étoiles de l\'univers. Tu es mon infini, ma galaxie, mon tout.',
                 color: '#7873f5'
