--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
                 color: '#7873f5'
             },
             {
-                image: '/mnt/user-data/uploads/1000425554.jpg',
+                image: 'IMG-20260211-WA0027.jpg',
                 title: 'Notre Connexion Profonde 💕',
                 description: 'Plus qu\'une photo, c\'est le reflet de l\'amour pur que nous partageons. Chaque seconde ensemble est précieuse.',
                 color: '#ffd700'
