--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
                 color: '#7873f5'
             },
             {
-                image: '/mnt/user-data/uploads/1000425575.jpg',
+                image: 'IMG-20260211-WA0029.jpg',
                 title: 'Nos Fous Rires Cosmiques 😄',
                 description: 'Ce souvenir de nous riant ensemble sans raison. C\'est dans ces moments simples que notre amour brille le plus fort.',
                 color: '#ffd700'
