--- a/index.html
+++ b/index.html
@@ -687,8 +687,8 @@
                 color: '#ff6ec7'
             },
             {
-                image: '/mnt/user-data/uploads/1000425562.jpg',
-                title: 'Notre Première Complicité 💑',
+                image: 'IMG-20260211-WA0031.jpg',
+                title: 'Notre  Complicité 💑',
                 description: 'Le moment où nos regards se sont croisés et où nous avons compris que nous étions faits l\'un pour l\'autre. Cette connexion instantanée qui a changé nos vies.',
                 color: '#7873f5'
             },
