--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
                 color: '#ffd700'
             },
             {
-                image: '/mnt/user-data/uploads/1000425569.jpg',
+                image: 'IMG-20260211-WA0028.jpg',
                 title: 'Main Dans La Main 💫',
                 description: 'Chaque fois que je tiens ta main, je sens que rien ne peut nous séparer. Tu es mon ancre dans cet univers infini.',
                 color: '#ff6ec7'
