--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
         // CALCUL JOURS ENSEMBLE
         function calculateDaysTogether() {
             // CHANGE CETTE DATE avec votre vraie date de début de relation
-            const startDate = new Date('2025-01-14'); // ← CHANGE CETTE DATE !
+            const startDate = new Date('2026-01-14'); // ← CHANGE CETTE DATE !
             const today = new Date();
             const diffTime = Math.abs(today - startDate);
             const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
@@ -717,7 +717,7 @@
                 color: '#ffd700'
             },
             {
-                image: '/mnt/user-data/uploads/1000425540.jpg',
+                image: 'IMG-20260211-WA0030.jpg',
                 title: 'Ton Style Unique 👑',
                 description: 'Tu es magnifique dans tout ce que tu portes, mais c\'est ton cœur qui te rend vraiment exceptionnelle.',
                 color: '#ff6ec7'
